--- a/package.json
+++ b/package.json
@@ -64,6 +64,7 @@
         "react-lazy-load-image-component": "^1.6.2",
         "react-location-picker": "^1.5.0",
         "react-otp-input": "^3.1.1",
+        "react-phone-input-2": "^2.15.1",
         "react-phone-number-input": "^3.4.5",
         "react-places-autocomplete": "^7.3.0",
         "react-qr-reader": "^3.0.0-beta-1",
