--- a/.env
+++ b/.env
@@ -1,6 +1,7 @@
 # NEXT_PUBLIC_API_URL=https://api.sedarglobal.com/
 NEXT_PUBLIC_API_URL=https://migapi.sedarglobal.com/
 NEXT_PUBLIC_API_URL_HF=https://uatapi.sedarglobal.com/
+LIVE_URL=https://api.sedarglobal.com/
 # NEXT_PUBLIC_API_URL=https://migapi.sedarglobal.com/
 
 NEXT_PUBLIC_URL=https://uat.sedarglobal.com/
