--- a/package.json
+++ b/package.json
@@ -72,6 +72,7 @@
         "react-scroll-into-view": "^2.1.3",
         "react-slick": "^0.30.2",
         "react-social-login-buttons": "^4.1.0",
+        "react-toastify": "^11.0.5",
         "reactjs-social-login": "^2.6.3",
         "redux": "^5.0.1",
         "regenerator-runtime": "^0.14.1",
