--- a/package.json
+++ b/package.json
@@ -61,6 +61,7 @@
         "react-google-recaptcha": "^3.1.0",
         "react-hook-form": "^7.54.2",
         "react-i18next": "12.1.1",
+        "react-joyride": "^2.9.3",
         "react-lazy-load-image-component": "^1.6.2",
         "react-location-picker": "^1.5.0",
         "react-otp-input": "^3.1.1",
@@ -73,6 +74,7 @@
         "react-slick": "^0.30.2",
         "react-social-login-buttons": "^4.1.0",
         "react-toastify": "^11.0.5",
+        "react-use": "^17.6.0",
         "reactjs-social-login": "^2.6.3",
         "redux": "^5.0.1",
         "regenerator-runtime": "^0.14.1",
