--- a/.env
+++ b/.env
@@ -3,6 +3,7 @@ NEXT_PUBLIC_API_URL=https://migapi.sedarglobal.com/
 NEXT_PUBLIC_API_URL_HF=https://uatapi.sedarglobal.com/
 LIVE_URL=https://api.sedarglobal.com/
 # NEXT_PUBLIC_API_URL=https://migapi.sedarglobal.com/
+ANALYZE=true
 
 NEXT_PUBLIC_URL=https://uat.sedarglobal.com/
 NEXT_PUBLIC_LOCAL_API_URL=https://www.sedarglobal.com/
