--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
         "dev": "next dev",
         "build": "next build",
         "start": "next start",
-        "lint": "next lint"
+        "lint": "next lint",
+        "analyze": "cross-env ANALYZE=true next build"
+
     },
     "dependencies": {
         "@emotion/cache": "^11.13.1",
@@ -21,7 +23,7 @@
         "@mui/material": "^5.16.7",
         "@mui/material-nextjs": "^5.16.6",
         "@mui/x-date-pickers": "^6.18.0",
-        "@next/bundle-analyzer": "^14.2.6",
+        "@next/bundle-analyzer": "^14.2.28",
         "@next/font": "^14.2.13",
         "@next/third-parties": "^14.2.6",
         "@react-google-maps/api": "^2.19.3",
