--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,37 @@
-.next
+# Node.js
 node_modules
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+pnpm-debug.log*
+dist
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+
+# Next.js build output
+.next
+out
+
+# Vercel
+.vercel
+
+# Mac system files
+.DS_Store
+
+# Log files
+*.log
+
+# Optional: Ignore IDE files (VSCode, JetBrains, etc.)
+.vscode/
+.idea/
+
+# Optional: Coverage reports
+coverage
+
+# Optional: OS files
+Thumbs.db
+
+*.zip
+
