--- a/package.json
+++ b/package.json
@@ -8,19 +8,18 @@
         "start": "next start",
         "lint": "next lint",
         "analyze": "cross-env ANALYZE=true next build"
-
     },
     "dependencies": {
         "@emotion/cache": "^11.13.1",
-        "@emotion/react": "^11.13.3",
+        "@emotion/react": "^11.14.0",
         "@emotion/server": "^11.11.0",
-        "@emotion/styled": "^11.13.0",
+        "@emotion/styled": "^11.14.0",
         "@fullpage/react-fullpage": "^0.1.42",
         "@iconify/react": "^5.0.2",
         "@mui/icons-material": "^5.16.7",
         "@mui/joy": "^5.0.0-alpha.45",
         "@mui/lab": "^5.0.0-alpha.173",
-        "@mui/material": "^5.16.7",
+        "@mui/material": "^5.17.1",
         "@mui/material-nextjs": "^5.16.6",
         "@mui/x-date-pickers": "^6.18.0",
         "@next/bundle-analyzer": "^14.2.28",
@@ -48,6 +47,7 @@
         "next": "14.2.13",
         "next-compose-plugins": "^2.2.1",
         "next-i18next": "13.0.3",
+        "next-pwa": "^5.6.0",
         "next-redux-wrapper": "^8.1.0",
         "next-translate": "^2.6.2",
         "notistack": "^3.0.1",
