--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
 # NEXT_PUBLIC_API_URL=https://api.sedarglobal.com/
-NEXT_PUBLIC_API_URL=https://uatapi.sedarglobal.com/
-# NEXT_PUBLIC_API_URL=https://migapi.sedarglobal.com/
+# NEXT_PUBLIC_API_URL=https://uatapi.sedarglobal.com/
+NEXT_PUBLIC_API_URL=https://migapi.sedarglobal.com/
 NEXT_PUBLIC_API_URL_HF=https://uatapi.sedarglobal.com/
 LIVE_URL=https://api.sedarglobal.com/
 # NEXT_PUBLIC_API_URL=https://migapi.sedarglobal.com/
